# Genjux-Store

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
.copilot-workflow/: .gitignore  DASHBOARD.html  IMPLEMENTATION.md  INDEX.md  LOG.md  PLAN.md  PROJECT.md  REQUEST.md  REVIEW.md  STATUS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_e2e.rs
core/: Cargo.toml
core/docs/: genjux-yaml.md
core/src/: api.rs  audit.rs  classify.rs  curator.rs  discovery.rs  download.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  orchestrate.rs  package.rs  registry.rs  verify.rs
core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
core/src/source/: github.rs  mod.rs
core/tests/: e2e_real_repos.rs  lifecycle_cross_process.rs
macos/: DISTRIBUTION.md  QA_CHECKLIST.md  README.md  project.yml
macos/GenjuxStore/App/: AppDelegate.swift  Info.plist  RootViewController.swift  main.swift
macos/GenjuxStore/AppDetail/: AppDetailViewController.swift
macos/GenjuxStore/Core/: CoreServiceClient.swift  Models.swift  ServiceInfo.swift  ServiceLifecycle.swift
macos/GenjuxStore/Home/: AppCardItem.swift  HomeViewController.swift
macos/GenjuxStore/Install/: InstallProgressViewController.swift
macos/GenjuxStore/Installed/: InstalledViewController.swift
macos/GenjuxStore/Search/: SearchViewController.swift
macos/GenjuxStoreTests/: CoreServiceClientTests.swift  InstallStageTests.swift
macos/design/: make_icon.py
macos/scripts/: build-release.sh  e2e-validate.sh  e2e-validate.swift
