[package]
name = "genjux-cli"
description = "Genjux-Store command-line client."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "genjux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
genjux-core = { path = "../core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3"
