[package]
name = "genjux-core"
description = "Genjux-Store core service: discovery, release classification, download, verification, and install orchestration."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "genjux_core"
path = "src/lib.rs"

[[bin]]
name = "genjuxd"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
wiremock = "0.6"
